--- a/web/src/locales/en/home.json
+++ b/web/src/locales/en/home.json
@@ -5,6 +5,30 @@
       "subtitle": "Care for your plants with clarity, routines, and history.",
       "purpose": "Add your plants, link species definitions for guidance, define recurring reminders, and track care history, with optional live sensor monitoring and QR-based access to plant details."
     },
+    "core": {
+      "title": "The two things Flovers does best",
+      "lead": "A solid plant database and quick photo recognition. Pick a match, link it once, and you’ve got a clean starting point for caring for your plants.",
+      "tiles": {
+        "defs": {
+          "title": "700+ plant definitions with real care details",
+          "desc": "Browse definitions with photos and key traits. Link your plant to a definition and Flovers can guide you with sensible defaults.",
+          "bullets": [
+            "Care traits like light, soil, watering style, humidity, temperature.",
+            "Helpful starting point that you can tweak as you learn your space.",
+            "Quick linking so each plant has a clear baseline."
+          ]
+        },
+        "recognition": {
+          "title": "Photo recognition that suggests the closest match",
+          "desc": "Snap a photo or upload one and Flovers suggests what it looks like. Choose the best match, link it, and move on.",
+          "bullets": [
+            "Works best with clear, well lit photos.",
+            "Shows a few close options so you can pick the right one.",
+            "Built to save time, not to lock you into a guess."
+          ]
+        }
+      }
+    },
     "store": {
       "google": {
         "alt": "Get it on Google Play"
